Update index.html with new site information
Added a new update about yagoonek.xyz and modified some text.

--- a/index.html
+++ b/index.html
@@ -29,11 +29,12 @@
         <h2>updates</h2>
         <p>07.02.2026 updated the site to a human look :PPP</p>
         <p>08.02.2026 added myworks site</p>
+        <p>13.02.2026 yagoonek.xyz (finally)</p>
       </aside>
 
       <main>
         <h2>hello</h2>
-        <p>this is my neocities site :DDDD</p>
+        <p>this is my website :DDDD</p>
         <p>wdjaijsidojwiajsdhuwhauihid</p>
       </main>
     </div>
@@ -45,3 +46,4 @@
   </div>
 </body>
 </html>
+
