--- a/myworks.html
+++ b/myworks.html
@@ -1,6 +1,6 @@
 <head>
   <meta charset="UTF-8">
-  <title>my works - yagoonek.neocities.org</title>
+  <title>my works - yagoonek.xyz</title>
   <link rel="stylesheet" href="styles.css">
 
   <style>
@@ -71,7 +71,7 @@
 
         <h3>tracks</h3>
         <ul id="tracklist">
-          <li onclick="playTrack('https://yagoonek.nekoweb.org/neocitiesfilehost/myworks-future.mp3', 'Future')">Future</li>
+          <li onclick="playTrack('https://github.com/yagoonek/website/blob/main/future.mp3', 'Future')">Future</li>
           <li>Waterfall (i will add it soon)</li>
         </ul>
 
@@ -85,7 +85,7 @@
         </div>
 
         <p>its on spotify but you can download it from here:</p>
-        <p><a href="https://yagoonek.nekoweb.org/neocitiesfilehost/myworks-future.mp3" download>future</a></p>
+        <p><a href="https://github.com/yagoonek/website/blob/main/future.mp3" download>future</a></p>
         <p><a href="https://yagoonek.nekoweb.org/neocitiesfilehost/myworks-waterfall.mp3" download>waterfall (not yet)</a></p> 
       </main>
     </div>
@@ -118,3 +118,4 @@
   </script>
 </body>
 </html>
+
