Fix audio file links and update HTML structure

--- a/myworks.html
+++ b/myworks.html
@@ -71,7 +71,7 @@
 
         <h3>tracks</h3>
         <ul id="tracklist">
-          <li onclick="playTrack('https://github.com/yagoonek/website/blob/main/future.mp3', 'Future')">Future</li>
+          <li onclick="playTrack('https://github.com/yagoonek/website/raw/refs/heads/main/future.mp3', 'Future')">Future</li>
           <li>Waterfall (i will add it soon)</li>
         </ul>
 
@@ -85,8 +85,8 @@
         </div>
 
         <p>its on spotify but you can download it from here:</p>
-        <p><a href="https://github.com/yagoonek/website/blob/main/future.mp3" download>future</a></p>
-        <p><a href="https://yagoonek.nekoweb.org/neocitiesfilehost/myworks-waterfall.mp3" download>waterfall (not yet)</a></p> 
+        <p><a href="https://github.com/yagoonek/website/raw/refs/heads/main/future.mp3" download>future</a></p>
+        <p><a href="https://github.com/yagoonek/website/raw/refs/heads/main/waterfall.mp3" download>waterfall (not yet)</a></p> 
       </main>
     </div>
 
@@ -118,4 +118,5 @@
   </script>
 </body>
 </html>
+
 
