Fix HTML formatting and add CFM track

--- a/myworks.html
+++ b/myworks.html
@@ -73,6 +73,7 @@
         <ul id="tracklist">
           <li onclick="playTrack('https://github.com/yagoonek/website/raw/refs/heads/main/future.mp3', 'Future')">Future</li>
           <li>Waterfall (i will add it soon)</li>
+          <li onclick="playTrack('https://github.com/yagoonek/website/raw/refs/heads/main/CFM.mp3', 'CFM')">CFM</li>
         </ul>
 
         <div id="player">
@@ -119,6 +120,7 @@
   </script>
 </body>
 </html>
+
 
 
 
