--- a/about.html
+++ b/about.html
@@ -1,6 +1,6 @@
 <head>
   <meta charset="UTF-8">
-  <title>about</title>
+  <title>about - yagoonek.xyz</title>
   <link rel="stylesheet" href="styles.css">
 </head>
 
